@@ -1,3 +1,9 @@
+2021-05-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.c,
+	  support/regression/tests/bug2084206.c:
+	  Function pointer size fix.
+
 2021-05-14 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
